--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/searchbar.css">
     <link rel="stylesheet" href="css/violations.css">
     <link rel="stylesheet" href="node_modules/nice-forms.css/dist/nice-forms.css">
+    <link rel="stylesheet" href="https://unpkg.com/nice-forms.css@0.1.7/dist/nice-forms.css" />
 
 
     <link rel="icon" href="assets/logo.png">
