--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://devliqht.github.io/osa-violation-tracker">
+    <meta property="og:url" content="https://devliqht.github.io/osa-demo">
     <meta property="og:title" content="OSA Violation Tracker">
     <meta property="og:description" content="Office of Student Affairs Violation Tracker by Matt & Faye from USC-NC G12 STEM ST">
-    <meta property="og:image" content="https://devliqht.github.io/hobby-project/assets/meta.png"> 
+    <meta property="og:image" content="https://devliqht.github.io/osa-demo/assets/reportheader1.png"> 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script src="https://kit.fontawesome.com/1fb0157614.js" crossorigin="anonymous"></script>
@@ -46,10 +46,12 @@
             </header>
             <main>
                 <div class="main-body-wrapper">
+
+                    <!--ADD STUDENT MODAL-->
                       <div class="add-student-modal" id="add-student-modal">
                         <div class="student-modal-content">
                             <span style="display: flex; flex-direction: row; align-items: center; justify-content: space-between;">
-                                <h1>Add Student</h1>
+                                <h2>Add Student</h2>
                                 <div class="padding-lg"></div>
                                 <a href="#" class="button-close"><i class="fa-solid fa-xmark fa-2x"></i></a>
                             </span>
@@ -60,13 +62,13 @@
 
                             <div class="nice-form-group">
                                 <label>Name of Student</label>
-                                <input type="text" placeholder="Your name" />
+                                <input type="text" placeholder="Student Name" />
                             </div>
                             <div class="nice-form-group">
                                 <label>Student ID</label>
                                 <input type="number" placeholder="ex. 22103604" />
                               </div>
-                              
+                            
                             <div class="nice-form-group">
                                 <label>Blocksection</label>
                                 <select>
@@ -94,6 +96,17 @@
 
                                 </select>
                             </div>
+
+                            <div class="nice-form-group">
+                                <label>Select Violation</label>
+                                <select>
+                                  <option>20.1.1 Entering the University campus without a valid USC SHS ID</option>
+                                  <option>20.1.2 Not wearing the official USC SHS ID on campus</option>
+                                  <option>20.1.3 Using two or more ID cards or gate pass by whatever means or manner</option>
+                                  <option>20.1.4 Tailgating: Borrowing or lending of USC SHS ID, gate pass, library...</option>
+                                </select>
+                            </div>
+
                             <div class="nice-form-group">
                                 <label>Details of Violation/Offense</label>
                                 <textarea rows="5" value=""></textarea>
@@ -101,13 +114,56 @@
 
                               <div class="nice-form-group">
                                 <label>Date of Violation/Offense Committed</label>
-                                <input type="date" value="2018-07-22" />
+                                <input type="date" value="2023-09-16" />
                               </div>
                         </div>
                       </div>
 
+
+                      <!--STUDENT PROFILE MODAL-->
+                      <div class="add-student-modal" id="student-profile-modal">
+                        <div class="student-modal-content">
+                            <span style="display: flex; flex-direction: row; align-items: center; justify-content: space-between;">
+                                <h2>Student Profile</h2>
+                                <div class="padding-lg"></div>
+                                <a href="#" class="button-close"><i class="fa-solid fa-xmark fa-2x"></i></a>
+                            </span>
+                            <hr style="width: 100%;
+                            height: 4px;
+                            background-color: var(--uscgreen);
+                            border: none;">
+                            <div class="student-profile">
+                                <div class="student-info">
+                                    <div class="student-icon">
+                                        <img src="assets/usericon.png">
+                                    </div>
+                                    <div class="student-details">
+                                        <h2>Name</h2>
+                                        <div class="name" id="student-name">Matt Erron G. Cabarrubias</div>
+
+                                        <h2>ID</h2>
+                                        <div class="id" id="student-id">22103604</div>
+
+                                        <h2>Blocksection</h2>
+                                        <div class="blocksection" id="student-blocksection">STEM 12 ST</div>
+                                    </div>
+                                </div>
+                                <div class="student-active-violations">
+                                    <span style="display: flex; flex-direction: row; align-items: center; justify-content: space-between;"><h2 style="margin-bottom: 2px;">Active Violations</h2> <i class="fa-solid fa-plus fa-2x"></i></span>
+                                    <div class="violation-details">
+                                        <h3>Entering the University campus without a valid USC SHS ID</h3>
+                                    </div>
+                                    <div class="violation-details">
+                                        <h3>Possession of cigarette, e-cigarette, vaping, or any smoking paraphernalia</h3>
+                                    </div>
+                                </div>
+                                <span style="display: flex; flex-direction: row; align-items: center; justify-content: space-between;"><h2 style="margin-bottom: 2px;">History of Offenses</h2> <i class="fa-solid fa-ellipsis-vertical fa-2x"></i></span>
+                            </div>
+                        </div>
+                      </div>
+
                     <div class="ac-vio-array">
-                        <a class="button-open" href="#add-student-modal">
+                        <a class="button-open-add" href="#add-student-modal">
                             <div class="add-student-wrapper">
                                 <i class="fa-solid fa-plus fa-2x"></i>
                                 <div class="info">
@@ -117,14 +173,16 @@
                             </div>
                         </a>
 
-                        <div class="student-active-wrapper">
-                            <i class="fa-solid fa-user fa-2x"></i>
-                            <div class="info">
-                                <h2>Matt Cabarrubias</h2>
-                                <h3>Status: <span style="color: var(--uscred);">Active Violation</span></h3>
+                        <a class="button-open-profile" href="#student-profile-modal">
+                            <div class="student-active-wrapper">
+                                <i class="fa-solid fa-user fa-2x"></i>
+                                <div class="info">
+                                    <h2>Matt Cabarrubias</h2>
+                                    <h3>Status: <span style="color: var(--uscred);">Active Violation</span></h3>
+                                </div>
+                                <i class="fa-solid fa-ellipsis-vertical fa-2x"></i>
                             </div>
-                            <i class="fa-solid fa-ellipsis-vertical fa-2x"></i>
-                        </div>
+                        </a>
 
                         <div class="student-active-wrapper">
                             <i class="fa-solid fa-user fa-2x"></i>
